feat(exec): paper adapter + live stubs + killswitch/budgets

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,18 @@
-ALPHA_VANTAGE_API_KEY=alpha_vantage_api_key_placeholder
-OPENAI_API_KEY=openai_api_key_placeholder
+# Execution defaults
+EXECUTION_MODE=none
+PAPER_JOURNAL_PATH=logs/execution/paper_journal.jsonl
+PAPER_SEED=42
+PAPER_DEFAULT_SPREAD=0.5
+PAPER_FEE_BPS=5
+EXEC_BUDGET__DEFAULT=500000
+EXEC_KILLSWITCH_PATH=.runtime/killswitch.flag
+
+# Optional live adapters (DO NOT COMMIT REAL VALUES)
+HYPERLIQUID_API_KEY=
+HYPERLIQUID_API_SECRET=
+HYPERLIQUID_ACCOUNT_ID=
+
+CCXT_EXCHANGE=binance
+CCXT_API_KEY=
+CCXT_API_SECRET=
+CCXT_API_PASSPHRASE=
